# Release 3.3.8.7

 * PrivateSend: support mixing on hardware wallets (using ps_keystore)
 * qt: fix exported files file mode
 * qt: allow hide warning for watch-only wallet
 * add "pay:" scheme to support anypayinc.com
 * allow bypass Tor proxy for Fiat rates loading (option in Proxy settings)
 * protx_list: enhance network data processing
 * other qt gui fixes


# Release 3.3.8.6

 * PrivateSend: allow start mixing before llmq/protx ready,
   stop mixing only if keep amount is available on ps balance
 * Enhance "Detect Tor proxy on wallet startup" option behaviour/UI
 * DIP3 masternodes: support collateral in ProRegTx output (p2sh addresses
   support), other fixes
 * Remove legacy masternodes commands from commands.py
 * Add UI to handle Other PS coins
 * Add separate ps_keystore for PrivateSend operation
 * Other fixes


# Release 3.3.8.5

 * PrivateSend: Check on small amount of minimal denoms and propose
   to make new small denoms tx from single larger denom (no change)
 * PrivateSend: fixes related to keypairs cleanup, fix PS balance when
   other ps coins is presented
 * PrivateSend: block receiving GUI during mixing to prevent
   interfering with addresses reserved for PS use
 * Android: add button to start Orbot on wallet startup if Tor is not
   detected, fix versionCode for arm64-v8a apk


# Release 3.3.8.4

 * Trezor/KeepKey plugins: fix signing of CbTx outputs
 * Disable PrivateSend and PrivateSend UI for HW wallets (unsupported),
   allow mixing amounts below keep amount, other PS fixses
 * android receive screen: copy address instead Payment Request if
   amount is not set
 * add PPA for Focal Fossa (Ubuntu 20.04), android arm64-v8a apk build
 * update Tor Proxy in win builds to 0.4.2.6


# Release 3.3.8.3

 * add Dash PrivateSend support (qt/kivy gui supported)
 * update ecdsa version to 0.14.1
 * some Dash P2P network related code/gui fixes
 * fix islocks handling
 * some ProTx masternodes related code/gui fixes, gather protx